syntax = "proto3";

package techcubing;

option java_package = "com.techcubing.proto";
option java_outer_classname = "DeviceConfigProto";

import "src/main/proto/device.proto";
import "src/main/proto/wca_environment.proto";
import "src/main/proto/wcif/competition.proto";

message DeviceConfig {
  Device device = 1;

  wcif.WcifCompetition competition = 2;

  string serverHost = 3;

  int32 serverPort = 4;

  WcaEnvironment wca_environment = 5;
}
